# Metalloproteins

./: 6gv6.cif  README.md  basic_example_usage.py  config.yaml  demo_with_basic_config.py  enhanced_example_usage.py  enhanced_example_with_markov_gromacs.py  example_usage.py  molecular_dynamics.ipynb  pipeline_demo_6gv6.py  pyproject.toml  requirements.txt  requirements_fixed.txt  test_pipeline.py  visualize_6gv6_results.py
.ipynb_checkpoints/: 13_stochastic_differentiation-checkpoint.ipynb
6gv6_results/: binding_sites.txt
config/basic/: config.yaml
config/enhanced/: enhanced_config.yaml
demo_results/: binding_sites.txt
docs/: Demo1.md  iGEM_Feedback_Response.md  mathematical_framework.md  ode_explanation.md  variational-encoder.md
docs/enhanced/: enhanced_algorithmic_implementation.md  enhanced_architecture_documentation.md  enhanced_architecture_summary.md  enhanced_mathematical_framework.md  enhanced_pipeline_readme.md  enhanced_usage_guide.md  installation_and_setup.md  output_interpretation_guide.md
src/: __init__.py  binding_kinetics.py  brownian_simulation.py  main.py  pdb_processor.py
src/basic/: __init__.py  main.py
src/enhanced/: __init__.py  enhanced_binding_kinetics.py  enhanced_binding_site_identification.py  enhanced_main.py  enhanced_pipeline_with_markov_gromacs.py  gromacs_optimizer.py  markov_chain_sequence.py  topology_grammar_parser.py
